Developing login/logout interface.
 Changes to be committed:
	modified:   api/controllers/controller.account.js
	modified:   api/lib/lib.js
	deleted:    api/routes/routes.js
	modified:   package.json
	deleted:    public/app/api/api.service.js.map
	deleted:    public/app/app.component.js
	deleted:    public/app/app.component.js.map
	deleted:    public/app/app.component.ts
	deleted:    public/app/argument/list/argument.list.component.js.map
	modified:   public/app/boot.js
	modified:   public/app/boot.js.map
	modified:   public/app/boot.ts
	new file:   public/app/components/app.component.js
	new file:   public/app/components/app.component.js.map
	new file:   public/app/components/app.component.ts
	renamed:    public/app/argument/detail/argument.detail.component.js -> public/app/components/argument-detail/argument.detail.component.js
	renamed:    public/app/argument/detail/argument.detail.component.js.map -> public/app/components/argument-detail/argument.detail.component.js.map
	renamed:    public/app/argument/detail/argument.detail.component.ts -> public/app/components/argument-detail/argument.detail.component.ts
	renamed:    public/app/argument/list/argument.list.component.js -> public/app/components/argument-list/argument.list.component.js
	new file:   public/app/components/argument-list/argument.list.component.js.map
	renamed:    public/app/argument/list/argument.list.component.ts -> public/app/components/argument-list/argument.list.component.ts
	renamed:    public/app/home/home.component.js -> public/app/components/home/home.component.js
	renamed:    public/app/home/home.component.js.map -> public/app/components/home/home.component.js.map
	renamed:    public/app/home/home.component.ts -> public/app/components/home/home.component.ts
	renamed:    public/app/api/api.service.js -> public/app/services/api/api.service.js
	new file:   public/app/services/api/api.service.js.map
	renamed:    public/app/api/api.service.ts -> public/app/services/api/api.service.ts
	new file: 

--- a/package.json
+++ b/package.json
@@ -12,15 +12,28 @@
 		"type" : "git",
 		"url" : "https://github.com/tyleryasaka/ergo.git"
 	},
+	"scripts": {
+    "tsc": "tsc",
+    "tsc:w": "tsc -w"
+  },
   "dependencies": {
 			"arangojs": "4.2.1",
 			"async": "1.4.2",
 			"body-parser": "1.13.3",
-			"connect-ensure-login": "git://github.com/tyleryasaka/connect-ensure-login#master",
 			"crypto": "0.0.3",
 			"express": "4.13.3",
 			"express-session": "1.11.3",
 			"passport": "0.3.2",
-			"passport-local": "1.0.0"
+			"passport-local": "1.0.0",
+			"angular2": "2.0.0-beta.0",
+			"systemjs": "0.19.6",
+			"es6-promise": "^3.0.2",
+			"es6-shim": "^0.33.3",
+			"reflect-metadata": "0.1.2",
+			"rxjs": "5.0.0-beta.0",
+			"zone.js": "0.5.10"
+  },
+  "devDependencies": {
+    "typescript": "^1.7.3"
   }
 }
